@@ -28,6 +28,7 @@ BUG FIXES:
 +Fix issue with portable profiles not loading when install directory path changes.
 +Fix crash that could occur when tab menu handler is called with no context manager.
 +Handle errors that can occur when adding items to file history.
++Fix crash from selecting invalid register when using vim mode.
 
 #-----------------------------------------------------------------------------#
 
